tests/build/cases/widget/new_fn_mismatched_capture_type2.stderr
warning: unused import: `zero_ui::core::var::IntoVar`
 --> cases/widget/new_fn_mismatched_capture_type2.rs:5:9
  |
5 |     use zero_ui::core::var::IntoVar;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
 --> cases/widget/new_fn_mismatched_capture_type2.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this warning originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> cases/widget/new_fn_mismatched_capture_type2.rs:18:23
   |
3  | #[widget($crate::test_widget)]
   | ------------------------------ arguments to this function are incorrect
...
18 |     fn new_child(foo: NotFoo) -> NilUiNode {
   |                       ^^^^^^ expected struct `NotFoo`, found struct `test_widget::Foo`
   |
note: function defined here
  --> cases/widget/new_fn_mismatched_capture_type2.rs:18:8
   |
18 |     fn new_child(foo: NotFoo) -> NilUiNode {
   |        ^^^^^^^^^-
